add api login and logout with auth O2
